tests/miniJava/neg/000105_mutation.MiniJava
class java { public if void Main ( String [ ] java ) { { } } }
